<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/write_text_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/card_background_color"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground">

            <TextView
                    android:id="@+id/write_text_caption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/ic_text"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="8dp"
                    android:text="@string/add_text_caption" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/write_wifi_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/card_background_color"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground">

            <TextView
                    android:id="@+id/write_wifi_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_wifi_icon"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="8dp"
                    android:text="@string/wifi_ap_info_caption" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/write_app_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/card_background_color"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground">

            <TextView
                    android:id="@+id/write_app_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_contacts"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="8dp"
                    android:text="@string/contact_information_caption" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/write_bluetooth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="@dimen/default_margin"
                android:background="@color/card_background_color"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                android:foreground="?android:attr/selectableItemBackground">

            <TextView
                    android:id="@+id/write_bluetooth_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_bluetooth"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="8dp"
                    android:text="@string/bt_device_info_caption" />
        </com.google.android.material.card.MaterialCardView>
    </GridLayout>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toTopOf="@+id/gridLayout"
            app:layout_constraintEnd_toEndOf="@+id/gridLayout"
            app:layout_constraintStart_toStartOf="@+id/gridLayout"
            app:layout_constraintTop_toTopOf="parent">

        <TextView
                android:id="@+id/write_tag_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:paddingLeft="30dp"
                android:paddingEnd="30dp"
                android:paddingRight="30dp"
                android:text="@string/write_tag_caption"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:typeface="monospace" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>