<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@android:color/black">
    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/upload_button"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/download_button"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:contentPadding="8dp"
            app:cardBackgroundColor="@color/card_background_color">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/upload_button_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:drawablePadding="8dp"
                    android:id="@+id/upload_caption"
                    android:drawableTop="@drawable/ic_upload_arrow"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@android:color/white"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/download_button"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:contentPadding="8dp"
            app:cardBackgroundColor="@color/card_background_color">
        <TextView
                android:text="@string/load_button_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/download_caption"
                android:gravity="center_horizontal|center_vertical"
                android:drawableTop="@drawable/ic_down_arrow"
                android:drawablePadding="8dp"
                android:layout_margin="8dp"
                android:textColor="@android:color/white"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_button"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/download_button"
            app:cardCornerRadius="8dp" app:cardElevation="8dp" app:contentPadding="8dp"
            app:cardBackgroundColor="@color/card_background_color">
        <TextView
                android:text="@string/about_button_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/about_caption"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@android:color/white"
                android:drawablePadding="8dp"
                android:layout_margin="8dp"
                android:drawableTop="@drawable/ic_question"/>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>