<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/upload_button"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/download_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            <ImageButton
                    android:id="@+id/upload_caption"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:contentDescription="@string/upload_button_caption"
                    android:drawablePadding="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:scaleType="center"
                    android:src="@drawable/ic_upload_arrow"
                    android:text="@string/upload_button_caption" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingBottom="@dimen/default_padding"
                    android:text="@string/upload_button_caption"
                    android:textAlignment="center" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/download_button"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            <ImageButton
                    android:id="@+id/download_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:contentDescription="@string/load_button_caption"
                    android:drawablePadding="8dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_down_arrow" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingBottom="@dimen/default_padding"
                    android:text="@string/load_button_caption"
                    android:textAlignment="center" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:id="@+id/about_button"
            android:layout_width="@dimen/menu_button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_button"
            android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

            <ImageButton
                    android:id="@+id/about_caption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:contentDescription="@string/about_button_caption"
                    android:drawablePadding="@dimen/default_padding"
                    android:gravity="center_horizontal|center_vertical"
                    android:scaleType="center"
                    android:src="@drawable/ic_question" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingBottom="@dimen/default_padding"
                    android:text="@string/about_button_caption"
                    android:textAlignment="center" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>